--- a/cardCounter/index.html
+++ b/cardCounter/index.html
@@ -34,8 +34,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-16">
-<script type="text/javascript" src="/js/jquery331.js"></script>
-<script type="text/javascript" src="/js/commonFunctions.js"></script>
+<script type="text/javascript" src="js/jquery331.js"></script>
+<script type="text/javascript" src="js/commonFunctions.js"></script>
 
 <style type="text/css">
     body { font-size: 18px; background-color: black; color: white; font-family: sans-serif; }
