--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
         CARD COUNTER SIMULATION - WITH HIDABLE STATS
         FULL GAME IS PLAYABLE
         ADD FACES TO PLAYERS
+        ADDED SOUND
+        BETTING
     
    TODO:
         ALLOW USERS TO SPLIT PAIRS
-        IMPLEMENT BETTING
+        SHUFFLE DECK AT 75% USED
+        BASE64 ENCODE THE SOUNDS
+        SHOW WHAT THE AI IS THINKING (MOSTLY IN 
+            CONSOLE.LOGS JUST NOW)
 
     NOTES:
         PLAYER POSITION HAS BEEN SET TO STATIC WHILST
